src/objects/Custom_Validation_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_To__c</fullName>
        <label>Mapped To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Custom Validation Fields</label>
</CustomObject>